@@ -1,16 +1,12 @@
 DIST ISPEnv2-phamm.schema 9071 RMD160 b31c20194096a400ba0d446b4229c1ee31bc2a05 SHA1 d4e17a9564766df034fea2377a67c24444d6af63 SHA256 4a3dcbcf01d308bf2a70abd2c87f11d7955d46b28547651c6683620b9641063d
 DIST amavis-phamm.schema 24405 RMD160 3f65f8cc296540c2b6472493b153b4a362ad69f0 SHA1 07839ea22bdd2ae7f968cb3f05fe3204c2d23b41 SHA256 c67820e358bc220b3c3a9ec117536edb640bdfac73d7cd4931ad31b4c9702444
 DIST dnsdomain2-phamm.schema 3848 RMD160 97e2c0901580e93ab6c91e0b1322004d53b82d9b SHA1 5105f2f373f315087ddca3a23b0eae60f557133d SHA256 86df6831f910b2764d04bd3c41f82cbc77b139783c1f6214d22f27f2e3992196
-DIST phamm-0.5.16.tar.gz 124162 RMD160 e3138a8584518e61afa95fce5eb34adbe7dbe35d SHA1 8f75d36a201ff0698848095f049eb504943397ef SHA256 0753dd780acd9be35c4ed156df0ad8b8f45f50265e818002b759577fc05fe80a
-DIST phamm-0.5.17.tar.gz 132570 RMD160 afc80230a46367a1c0f086dbc9c12754f3f82c0d SHA1 fa4ddc1f83d439b80d62b00c70fb60816b582d56 SHA256 a6ef6959df2f2d5766d9ea1d07a2ac7099a6ef37a8d89ddd5026922d3f4665df
 DIST phamm-0.5.18.tar.gz 132628 RMD160 c2a551a0de37df644d1bb7fe092595bc94f5b8fd SHA1 a4335004cef9b9fc19ed723a3a8adfc5b2f8c1ea SHA256 8b3b030ed77372bc201b8bc8f635c3e6ba12f833a76364d20d370cbad1effa8b
 DIST phamm05-current.tar.gz 130505 RMD160 fe65fcaf32d25f8952f68926c34fd3a2b1cc68a8 SHA1 2c1b316eda7a98ba6a6df633d6959dcacac0be0b SHA256 b3647ffba01070fa5f3b8fe6618c8bf65c0dee3c45f4638da1b871d3d92dbd5a
 DIST pureftpd-phamm.schema 2474 RMD160 a0b9ea825d5d5ead3a80d8b49473a4b44bc71230 SHA1 0f71d3f7e73a89c4caf03977b76a87007e5e2179 SHA256 0de60297967eb5037575d72ef88aa2acc03aecb10b4b470f2dd3f865ed1df0be
 DIST radius-phamm.schema 13259 RMD160 96b2c65ba20ca25223e8fabc7d2a86bd0dcf48ce SHA1 07a7fdbc17fd02059e4a3038886b85d5fded4d68 SHA256 c7261f3ba732dd6f7e55c7b9eece60ca28fd18e2c28db8ca3c8c03742986346f
 DIST samba-phamm.schema 16927 RMD160 a94fab67bec14bca9a7e1306e64917af237c8da1 SHA1 9fdcd0c5ef857ed08ea27456b2a380b43795a7d7 SHA256 d54ffc6422c0299298926519ee6db4857d333c6877b72c51a987059ac43418d0
-EBUILD phamm-0.5.16.ebuild 2838 RMD160 01d12adadc3e861a45987a40e5a398c0d7663175 SHA1 bf378c8b4bf6da3da18b25b7283f1d35905ad53c SHA256 163e5ba4770f9a935d0b77d72b84870861baab2ddf2b0e764a313782a39f0a6a
-EBUILD phamm-0.5.17.ebuild 2838 RMD160 01d12adadc3e861a45987a40e5a398c0d7663175 SHA1 bf378c8b4bf6da3da18b25b7283f1d35905ad53c SHA256 163e5ba4770f9a935d0b77d72b84870861baab2ddf2b0e764a313782a39f0a6a
 EBUILD phamm-0.5.18.ebuild 2838 RMD160 01d12adadc3e861a45987a40e5a398c0d7663175 SHA1 bf378c8b4bf6da3da18b25b7283f1d35905ad53c SHA256 163e5ba4770f9a935d0b77d72b84870861baab2ddf2b0e764a313782a39f0a6a
 EBUILD phamm-9999.ebuild 2278 RMD160 281402c3269518894442153324bea06663746624 SHA1 257c5b185efe1418dec56485b67432cba731a3c2 SHA256 d2f044407175eb427d356f267f5f8b1edae5b838429c12b6b874970f2470aa15
-MISC ChangeLog 722 RMD160 4d55287f3f59ea4b76d02ebeeb584e57a12db62d SHA1 8b55ab4bf9c9941c2cda52aa9d46d40340966d93 SHA256 06182c85e04fb23edbe463476574c79bb55eb1c3c6325accf6460547939b01f2
+MISC ChangeLog 841 RMD160 d2dade510b4ab410baed1054cce89b81c0142e4e SHA1 9503d0e971fe4b8150f313c7c94b46c713326d27 SHA256 26a75a143a9515d6a01a819859780d1edcd8b54aab66ef60772e1a566213646c
 MISC metadata.xml 718 RMD160 33bf0869b3923dee7ae3051e83406881d7a9fc98 SHA1 1023950c2237969fa974f6744d138a330f4e2197 SHA256 41d6a3cc91292edc0199b0b92f3f0a2483f8ff9a595511fc33b5b89f65a3c4f8
