@@ -2,6 +2,9 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  09 Jun 2010; A. Vinogradov <spamslepnoga@inbox.ru> -phamm-0.5.16.ebuild,
+  -phamm-0.5.17.ebuild:
+  remove old ebuild
 
   26 Apr 2010; A. Vinogradov <spamslepnoga@inbox.ru> +phamm-0.5.18.ebuild:
   new version
